# production-drift-detection

./: .gitignore  LICENSE  README.md  benchmark_results.txt  benchmark_results_rigorous.txt  benchmark_rigorous.py  benchmarks.py  demo.py  empirical_validation.py  empirical_validation_results.txt  mkdocs.yml  pyproject.toml  ques.md  run_benchmark.py
docs/: RESEARCH_NOTE.md  api_reference.md  benchmarks.md  getting-started.md  notebook-guide.md  usage_guide.md
notebooks/: driftwatch_case_study.ipynb  production_drift_detection_case_study.ipynb
src/driftwatch/: __init__.py
src/driftwatch/alerts/: __init__.py  rules.py  schemas.py
src/driftwatch/correlation/: __init__.py  confidence_drift.py
src/driftwatch/dashboard/: __init__.py  app.py  server.py  visuals.py
src/driftwatch/dashboard/static/: app.js  index.html
src/driftwatch/data/: __init__.py  loaders.py  synthetic_drift.py
src/driftwatch/detectors/: __init__.py  adwin.py  base.py  kl.py  mmd.py  psi.py
src/driftwatch/evaluation/: __init__.py  benchmarks.py  metrics.py
src/driftwatch/integrations/: __init__.py  hf_adapter.py  pytorch_adapter.py  sklearn_adapter.py
src/driftwatch/monitors/: __init__.py  confidence_monitor.py  stream_monitor.py
src/driftwatch/utils/: __init__.py  logging.py  stats.py  validation.py
src/production_drift_detection/: __init__.py
src/production_drift_detection/alerts/: __init__.py  rules.py  schemas.py
src/production_drift_detection/correlation/: __init__.py  confidence_drift.py
src/production_drift_detection/dashboard/: __init__.py  app.py  server.py  visuals.py
src/production_drift_detection/dashboard/static/: app.js  index.html  style.css
src/production_drift_detection/data/: __init__.py  loaders.py  synthetic_drift.py
src/production_drift_detection/detectors/: adwin.py  base.py  kl.py  mmd.py  psi.py
src/production_drift_detection/evaluation/: __init__.py  benchmarks.py  metrics.py
src/production_drift_detection/integrations/: __init__.py  hf_adapter.py  pytorch_adapter.py  sklearn_adapter.py
src/production_drift_detection/monitors/: __init__.py  confidence_monitor.py  stream_monitor.py
src/production_drift_detection/utils/: __init__.py  logging.py  stats.py  validation.py
tests/: __init__.py  test_alerts.py  test_correlation.py  test_dashboard.py  test_detectors.py  test_drift.py  test_monitors.py
