[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftwatch"
version = "0.1.0"
description = "Real-time data drift detection for deployed machine learning systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DriftWatch Contributors"},
]

keywords = [
    "data-drift",
    "ml-monitoring",
    "mlops",
    "model-observability",
    "distribution-shift",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "plotly>=5.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "joblib>=1.1.0",
]

[project.optional-dependencies]
pytorch = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
]
transformers = [
    "transformers>=4.20.0",
    "torch>=1.9.0",
    "datasets>=2.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
    "flake8>=5.0.0",
    "jupyter>=1.0.0",
    "nbformat>=5.5.0",
]
all = [
    "driftwatch[pytorch,transformers,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["driftwatch*"]

[tool.setuptools.package-data]
driftwatch = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring optional dependencies (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true

[tool.black]
line_length = 100
target_version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
